<resources>
    <string name="app_name">Cash Sales</string>
    <string name="toolbar_title">Welcome</string>
    <string name="home">Home</string>
    <string name="font_awesome_home">&#xf015;</string>
    <string name="font_awesome_report">&#xf080;</string>
    <string name="font_awesome_support">&#xf025;</string>
    <string name="font_awesome_settings">&#xf013;</string>
    <string name="reports">Reports</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="today_total">Today\'s Total</string>
    <string name="zero">\u20B90.0</string>
    <string name="yesterday_total">Yesterday\'s Total</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="card_sale">Card Sale</string>
    <string name="qr_sale">QR Sale</string>
    <string name="cash_sale">Cash Sale</string>
    <string name="insurance_membership">Insurance/Membership</string>
    <string name="font_awesome_card">&#xf09d;</string>
    <string name="font_awesome_qr">&#xf029;</string>
    <string name="font_awesome_cash">&#xf0d6;</string>
    <string name="font_awesome_insurance">&#xf287;</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="plus_nine_one">+91</string>
    <string name="please_enter_amount">Please enter bill amount.</string>
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="back">Back</string>
    <string name="cash">Cash</string>
    <string name="payment_successfull">Payment Sccessful</string>
    <string name="via_cash">via cash</string>
    <string name="back_to_home">Back to Home</string>
    <string name="status">Status : </string>
    <string name="success">Success</string>
    <string name="phone">Phone : +91 - </string>
    <string name="print">Print</string>
    <string name="ereceipt">E-receipt</string>
    <string name="payment_status">Payment Status</string>
</resources>