<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:weightSum="1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/toolbar_shadow">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/payment_status"
                android:gravity="center"
                android:fontFamily="@font/avenir_next_ltpro_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center_vertical" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.54"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:background="@color/status_background">
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/success_payment"
                app:tint="@color/payment_successfull"
                android:contentDescription="@string/payment_successfull" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/avenir_next_ltpro_demi" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/via_cash"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:textColor="@color/payment_successfull"
                    android:fontFamily="@font/avenir_next_ltpro_demi" />
            </LinearLayout>
            <TextView
                android:id="@+id/txt_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/avenir_next_ltpro_demi" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_weight="0.45">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:gravity="center|start"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textAllCaps="true"
                        android:fontFamily="@font/avenir_next_ltpro_demi"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_14sdp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/success"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:fontFamily="@font/avenir_next_ltpro_demi"
                        android:textColor="@color/payment_successfull"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/lightish_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:gravity="center|start"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textAllCaps="true"
                        android:fontFamily="@font/avenir_next_ltpro_demi"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_14sdp" />
                    <TextView
                        android:id="@+id/txt_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avenir_next_ltpro_demi"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:weightSum="1"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/btn_print"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:orientation="vertical"
                        android:layout_weight="0.5"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:gravity="center"
                        android:background="@drawable/btn_rounded_filled_white">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/print"
                            android:textAllCaps="true"
                            android:fontFamily="@font/avenir_next_ltpro_demi"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/btn_ereceipt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:orientation="vertical"
                        android:layout_weight="0.5"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:background="@drawable/btn_rounded_filled">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ereceipt"
                            android:textAllCaps="true"
                            android:fontFamily="@font/avenir_next_ltpro_demi"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/back_home"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:background="@drawable/btn_rounded_filled"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_home"
                    android:textAllCaps="true"
                    android:fontFamily="@font/avenir_next_ltpro_demi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</layout>